--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "helmet": "^5.0.2",
     "http-errors": "^2.0.0",
     "morgan": "~1.10.0",
+    "ngrok": "^4.3.3",
     "pug": "^3.0.2"
   },
   "devDependencies": {
